--- a/products.html
+++ b/products.html
@@ -24,6 +24,7 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link active" href="login.html">panadero</a></li>
                     <li class="nav-item"><a class="nav-link" href="store.html">ordenar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="shoppingCart.html">Carrito</a></li>
                 </ul>
             </div>
         </div>
