--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>About us - Brand</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.reflowhq.com/v1/toolkit.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
@@ -14,8 +15,8 @@
     <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
-<body style="background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('assets/img/cake.jpg');">
-    <h1 class="text-center text-white d-none d-lg-block site-heading"><span class="text-primary site-heading-upper mb-3"><strong>Just What The Outer Space Ordered</strong>&nbsp;</span><span class="site-heading-lower">NASAPAN</span></h1>
+<body style="background:linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('assets/img/bg.jpg');">
+    <h1 class="text-center text-white d-none d-lg-block site-heading"><span class="text-primary site-heading-upper mb-3"><strong>JUST WHAT THE OUTER SPACE ORDERED</strong></span><span class="site-heading-lower">NASAPAN</span></h1>
     <nav class="navbar navbar-dark navbar-expand-lg bg-dark py-lg-4" id="mainNav">
         <div class="container"><a class="navbar-brand text-uppercase text-expanded" href="index.html">Nasapan</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -29,24 +30,15 @@
             </div>
         </div>
     </nav>
-    <section class="page-section clearfix">
+    <section class="page-section about-heading">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" src="assets/img/intro.jpg">
-                <div class="text-center intro-text p-5 rounded bg-faded">
-                    <h2 class="section-heading mb-4"><span class="section-heading-upper">pasteles galacticos</span><span class="section-heading-lower">de otro planeta</span></h2>
-                    <p class="mb-3">Todos nuestros ingredientes son tratados con la mejor calidad de marte, preparados por nuestros mejores pasteleros estudiados en Júpiter.</p>
-                    <div class="mx-auto intro-button"><a class="btn btn-primary d-inline-block mx-auto btn-xl" role="button" href="store.html">¡Ordenar!</a></div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="page-section cta">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-9 mx-auto">
-                    <div class="text-center cta-inner rounded">
-                        <h2 class="section-heading mb-4"><span class="section-heading-upper">nuestra misión</span><span class="section-heading-lower">para explores</span></h2>
-                        <p class="mb-0">Cuando entres a nuestra tienda, sentirás que no perteneces a este planeta, te sentirás en el espacio sin nunca perder tu estilo Aesthetic, es por eso que desde nuestra apertura en Mercurio con el estilo de moda, nuestros productos han sobrepasado todos los estándares de calidad de cualquier planeta, para siempre ofrecerte lo mejor</p>
+            <div class="about-heading-content">
+                <div class="row">
+                    <div class="col-lg-10 col-xl-9 mx-auto">
+                        <div class="bg-faded rounded p-5">
+                            <h2 class="section-heading mb-4"></h2>
+                            <div data-reflow-type="shopping-cart"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -58,6 +50,7 @@
         </div>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.reflowhq.com/v1/toolkit.min.js" data-reflow-store="1377084707"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/current-day.js"></script>
 </body>
