--- a/store.html
+++ b/store.html
@@ -25,6 +25,7 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link active" href="login.html">panadero</a></li>
                     <li class="nav-item"><a class="nav-link" href="store.html">ordenar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="shoppingCart.html">Carrito</a></li>
                 </ul>
             </div>
         </div>
@@ -46,7 +47,6 @@
                         <div class="text-center justify-content-start flex-wrap-reverse justify-content-lg-center align-items-lg-center" data-reflow-type="product" data-reflow-product="626406738" data-reflow-show="name,price,description,add-to-cart"></div>
                         <div data-reflow-type="product" data-reflow-product="967743655" data-reflow-show="name,price,description,add-to-cart"></div>
                         <div data-reflow-type="product" data-reflow-product="982089268" data-reflow-show="name,price,description,add-to-cart"></div>
-                        <div data-reflow-type="shopping-cart"></div>
                         <p class="address mb-5"><em><strong>AV Marte 3312.</strong><span><br>Mérida. Mex</span></em></p>
                     </div>
                 </div>
