--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 <body style="background:linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('assets/img/bg.jpg');">
     <h1 class="text-center text-white d-none d-lg-block site-heading"><span class="text-primary site-heading-upper mb-3"><strong>JUST WHAT THE OUTER SPACE ORDERED&nbsp;</strong></span><span class="site-heading-lower">nasapan</span></h1>
     <nav class="navbar navbar-dark navbar-expand-lg bg-dark py-lg-4" id="mainNav">
-        <div class="container"><a class="navbar-brand text-uppercase text-expanded" href="index.html">Nasapan</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand text-uppercase text-expanded" href="index.html"><img src="assets/img/logo.svg" width="90">Nasapan</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">inicio</a></li>
@@ -36,7 +36,7 @@
                     <div class="col-lg-10 col-xl-9 mx-auto">
                         <div class="bg-faded rounded p-5">
                             <h2 class="section-heading mb-4"><span class="section-heading-upper">sabores extraterrestres&nbsp;</span><span class="section-heading-lower">nuestra misión</span></h2>
-                            <p>Cuando entres a nuestra tienda, sentirás que no perteneces a este planeta, te sentirás en el espacio sin nunca perder tu estilo Aesthetic, es por eso que desde nuestra apertura en Mercurio con el estilo de moda, nuestros productos han sobrepasado todos los estándares de calidad de cualquier planeta, para siempre ofrecerte lo mejor<br><br></p>
+                            <p>Queremos que nuestros visitantes, se sientan que no pertenecen a este planeta, se sentirán en el espacio sin nunca perder tu estilo Aesthetic, es por eso que desde nuestra apertura en Mercurio y con nuestro estilo de moda, nuestros productos han sobrepasado todos los estándares de calidad de cualquier planeta, para siempre ofrecerte lo mejor<br><br><img class="float-end d-xl-flex justify-content-xl-end" src="assets/img/logo.svg" width="80"><br></p>
                         </div>
                     </div>
                 </div>
