--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="row">
                 <div class="col-xl-9 mx-auto">
                     <div class="text-center cta-inner rounded">
-                        <h2 class="section-heading mb-4"><span class="section-heading-upper">nuestra misión</span><span class="section-heading-lower">para explores</span></h2>
+                        <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower">para explores</span></h2>
                         <p class="mb-0">Cuando entres a nuestra tienda, sentirás que no perteneces a este planeta, te sentirás en el espacio sin nunca perder tu estilo Aesthetic, es por eso que desde nuestra apertura en Mercurio con el estilo de moda, nuestros productos han sobrepasado todos los estándares de calidad de cualquier planeta, para siempre ofrecerte lo mejor</p>
                     </div>
                 </div>
