--- a/inventory.html
+++ b/inventory.html
@@ -36,32 +36,32 @@
             <div class="row articles">
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/pastel-tres-leches.jpg"></a>
                     <h3 class="name">Tres vías lácteas</h3>
-                    <p class="description">Hay: 14</p><a class="action" href="#"></a>
+                    <p class="description">Disponible: 14</p><a class="action" href="#"></a>
                 </div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"></a><img class="img-fluid" src="assets/img/pastel-chocolate.jpg">
                     <div></div>
                     <h3 class="name">Choconave</h3>
-                    <p class="description">Hay: 8</p><a class="action" href="#"></a>
+                    <p class="description">Disponible: 8</p><a class="action" href="#"></a>
                 </div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/pastel-capuccino.jpg"></a>
                     <h3 class="name">Cap-urano</h3>
-                    <p class="description">Hay: 4</p><a class="action" href="#"></a>
+                    <p class="description">Disponible: 4</p><a class="action" href="#"></a>
                 </div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/pastel-vainilla.jpg"></a>
                     <h3 class="name">Vainus</h3>
-                    <p class="description">Hay: 7</p><a class="action" href="#"></a>
+                    <p class="description">Disponible: 7</p><a class="action" href="#"></a>
                 </div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/pastel-fresa.jpg"></a>
                     <h3 class="name">Fresaturno</h3>
-                    <p class="description">Hay: 3</p><a class="action" href="#"></a>
+                    <p class="description">Disponible: 3</p><a class="action" href="#"></a>
                 </div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/pastel-zanahoria.jpg"></a>
                     <h3 class="name">Pazurno</h3>
-                    <p class="description">Hay: 8</p><a class="action" href="#"></a>
+                    <p class="description">Disponible: 8</p><a class="action" href="#"></a>
                 </div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/cheesecake.jpg"></a>
                     <h3 class="name">Luna</h3>
-                    <p class="description">Hay: 7</p><a class="action" href="#"></a>
+                    <p class="description">Disponible: 7</p><a class="action" href="#"></a>
                 </div>
             </div>
         </div>
